Add no visited state to organisation switcher

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -89,7 +89,8 @@
         text: passport.organisation.name,
         link: {
           text: "Change organisation",
-          href: "/"
+          href: "/",
+          classes: "govuk-link--no-visited-state"
         },
         classes: "govuk-width-container"
       }) }}
