Fix sub-nav visited link style

--- a/app/views/_components/sub-navigation/_sub-navigation.scss
+++ b/app/views/_components/sub-navigation/_sub-navigation.scss
@@ -52,6 +52,11 @@
     padding-left: 0;
   }
 
+  &:link,
+  &:visited {
+    color: govuk-colour("blue");
+  }
+
   &:focus {
     color: govuk-colour("black"); // Focus colour on yellow should really be black.
     position: relative; // Ensure focus sits above everything else.
