--- a/app/views/_components/organisation-switcher/template.njk
+++ b/app/views/_components/organisation-switcher/template.njk
@@ -1,11 +1,11 @@
-<div {%- if params.id %} id="{{ params.id }}"{% endif %} class="app-organisation-nav {{- ' ' + params.classes if params.classes }}" aria-label="{{ params.label | default('Organisation switcher') }}" {%- for attribute, value in params.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
-  <div class="app-organisation-nav__title">
+<div {%- if params.id %} id="{{ params.id }}"{% endif %} class="app-organisation-switcher {{- ' ' + params.classes if params.classes }}" aria-label="{{ params.label | default('Organisation switcher') }}" {%- for attribute, value in params.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
+  <div class="app-organisation-switcher__title">
     {{- params.html | safe if params.html else params.text -}}
   </div>
 
   {% if params.link %}
     {%- set linkText = params.link.text | default('Change organisation') -%}
-    <a {%- if params.link.id %} id="{{ params.link.id }}"{% endif %} href="{{ params.link.href }}" class="app-organisation-nav__link {{- ' ' + params.link.classes if params.link.classes }}" {%- for attribute, value in params.link.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
+    <a {%- if params.link.id %} id="{{ params.link.id }}"{% endif %} href="{{ params.link.href }}" class="app-organisation-switcher__link {{- ' ' + params.link.classes if params.link.classes }}" {%- for attribute, value in params.link.attributes %} {{ attribute }}="{{ value }}"{% endfor %}>
       {{- linkText -}}
     </a>
   {% endif %}
