Update financial incentive label

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -215,7 +215,7 @@
           },
           {
             key: {
-              text: "Financial incentives"
+              text: "Financial support from the government"
             },
             value: {
               text: financialIncentivesHtml
