Carry forward cycle choice when changing org

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -98,7 +98,7 @@
           items: [
             {
               text: "Change organisation",
-              href: "/"
+              href: "/organisations/cycles/" + cycleId
             } if passport.user.organisations.length > 1,
             {
               text: "Change recruitment cycle",
