Hide change cycle link if not roll over

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -103,7 +103,7 @@
             {
               text: "Change recruitment cycle",
               href: "/organisations/" + passport.organisation.id + "/cycles"
-            }
+            } if isRollover == "true"
           ] | removeEmpty
         },
         classes: "govuk-width-container"
