--- a/app/views/_components/organisation-actions/_organisation-actions.scss
+++ b/app/views/_components/organisation-actions/_organisation-actions.scss
@@ -23,13 +23,13 @@
 
 .app-organisation-actions__actions {
   margin: 0; // Reset default user agent styles
-  margin-bottom: govuk-spacing(3);
 
   @include govuk-media-query($from: tablet) {
     display: table-cell;
     width: 40%;
     padding-right: 0;
     text-align: right;
+    float: right;
   }
 }
 
