--- a/app/views/courses/about-course.njk
+++ b/app/views/courses/about-course.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "About this course" %}
+{% set title = "Course summary" %}
 {% set caption = course.name + " (" + course.code + ")" %}
 
 {% block pageTitle %}
@@ -27,61 +27,74 @@
         {% include "_includes/page-heading.njk" %}
       {% endset %}
 
+      {% set helpTextHtml %}
+        <p class="govuk-body">This is the first description candidates will see on Find, so it’s important that they can quickly learn why this course is different from another.</p>
+
+        <p class="govuk-body">Tell candidates:</p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>where they’ll spend their time</li>
+          <li>how the course is structured</li>
+          <li>how they’ll be supported - for example, tutors and mentoring</li>
+        </ul>
+
+        <p class="govuk-body">Remember to:</p>
+
+        <ul class="govuk-list govuk-list--bullet">
+          <li>avoid too much detail - you can use the other sections to elaborate</li>
+          <li>use bullet points and paragraphs to make your content easy to read</li>
+          <li>spell out acronyms the first time you use them, for example, ITT, NQT, SCITT</li>
+        </ul>
+
+        <p class="govuk-body"><a class="govuk-link" href="/guidance/course-summary-examples">View more guidance and course summary examples</a></p>
+      {% endset %}
+
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {{ govukCharacterCount({
-          id: "about-course",
-          name: "course[aboutCourse]",
-          rows: 20,
-          maxwords: 400,
-          label: {
-            html: headingHtml
-          },
-          errorMessage: errors | getErrorMessage("about-course"),
-          value: course.aboutCourse
-        }) }}
+        {% if query.version == 2 %}
 
-        {% set helpTextHtml %}
-          <p class="govuk-body">Give candidates a short summary of the course to help them decide if it’s right for them.</p>
+          {{ headingHtml | safe }}
 
-          <p class="govuk-body">Provide information like:</p>
+          {{ helpTextHtml | safe }}
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>what they’ll learn (for example, what units are taught)</li>
-            <li>how the course is structured</li>
-            <li>whether it has any distinctive features</li>
-          </ul>
+          {{ govukCharacterCount({
+            id: "about-course",
+            name: "course[aboutCourse]",
+            rows: 10,
+            maxwords: 200,
+            label: {
+              text: title,
+              classes: "govuk-label--s"
+            },
+            errorMessage: errors | getErrorMessage("about-course"),
+            value: course.aboutCourse
+          }) }}
 
-          <p class="govuk-body">You could include details such as:</p>
+        {% else %}
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>how candidates are assessed</li>
-            <li>the size of the workload (for example, how many essays per term)</li>
-            <li>league-table rankings and student employability ratings</li>
-            <li>quotes from past students</li>
-          </ul>
+          {{ govukCharacterCount({
+            id: "about-course",
+            name: "course[aboutCourse]",
+            rows: 10,
+            maxwords: 200,
+            label: {
+              html: headingHtml
+            },
+            errorMessage: errors | getErrorMessage("about-course"),
+            value: course.aboutCourse
+          }) }}
 
-          <p class="govuk-body">Remember to:</p>
+          {{ govukDetails({
+            summaryText: "Help with writing a course summary",
+            html: helpTextHtml
+          }) }}
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>use short paragraphs (no more than five sentences each)</li>
-            <li>use bullet points where possible (to check formatting, use the ‘preview’ function after saving your content)</li>
-            <li>spell out all acronyms the first time you use them, for example, ITT, NQT, EAL, ICT (candidates may not be familiar with these terms)
-            </li>
-          </ul>
+        {% endif %}
 
-          <p class="govuk-body">Several courses in the same subject?</p>
 
-          <p class="govuk-body">If you offer more than one course in the same subject, such as two Primary courses, it’s important to say how they differ (for example, differences in teaching placements or in the focus of the training). Otherwise, candidates may be unable to decide between them.</p>
-        {% endset %}
-
-        {{ govukDetails({
-          summaryText: "Help with about this course",
-          html: helpTextHtml
-        }) }}
 
         {{ govukButton({
-          text: "Update about this course"
+          text: "Update course summary"
         }) }}
 
       </form>
