Update guidance section

--- a/app/views/_includes/footer.njk
+++ b/app/views/_includes/footer.njk
@@ -43,7 +43,7 @@
     html: helpHtml,
     items: [{
       href: "/guidance",
-      text: "Guidance"
+      text: "How to use this service"
     }, {
       href: "#",
       text: "Accessibility"
@@ -59,9 +59,11 @@
     }, {
       href: "#",
       text: "Service performance"
-    }, {
-      href: "/prototype-admin/clear-data",
-      text: "Clear data"
     }]
   }
 }) }}
+
+{# , {
+  href: "/prototype-admin/clear-data",
+  text: "Clear data"
+} #}
