--- a/app/views/guidance/index.njk
+++ b/app/views/guidance/index.njk
@@ -3,7 +3,7 @@
 {% set hidePrimaryNavigation = true %}
 {% set hideOrganisationSwitcher = true %}
 
-{% set title = "Guidance" %}
+{% set title = "How to use this service" %}
 
 {% block beforeContent %}
 {{ govukBreadcrumbs({
