--- a/app/views/guidance/show.njk
+++ b/app/views/guidance/show.njk
@@ -3,7 +3,7 @@
 {% set hidePrimaryNavigation = true %}
 {% set hideOrganisationSwitcher = true %}
 
-{% set caption = "Guidance" %}
+{% set caption = "How to use this service" %}
 {% set title = title %}
 
 {% block beforeContent %}
