Catch word count errors

--- a/app/views/courses/about-course.njk
+++ b/app/views/courses/about-course.njk
@@ -61,7 +61,7 @@
             id: "about-course",
             name: "course[aboutCourse]",
             rows: 10,
-            maxwords: 200,
+            maxwords: wordCount,
             label: {
               text: title,
               classes: "govuk-label--s"
@@ -76,7 +76,7 @@
             id: "about-course",
             name: "course[aboutCourse]",
             rows: 10,
-            maxwords: 200,
+            maxwords: wordCount,
             label: {
               html: headingHtml
             },
