--- a/app/views/courses/school-placements.njk
+++ b/app/views/courses/school-placements.njk
@@ -57,7 +57,7 @@
             id: "school-placements",
             name: "course[howSchoolPlacementsWork]",
             rows: 20,
-            maxwords: 350,
+            maxwords: wordCount,
             label: {
               text: title,
               classes: "govuk-label--s"
@@ -72,7 +72,7 @@
             id: "school-placements",
             name: "course[howSchoolPlacementsWork]",
             rows: 20,
-            maxwords: 350,
+            maxwords: wordCount,
             label: {
               html: headingHtml
             },
