--- a/app/views/courses/interview-process.njk
+++ b/app/views/courses/interview-process.njk
@@ -49,7 +49,7 @@
             id: "interview-process",
             name: "course[interviewProcess]",
             rows: 20,
-            maxwords: 250,
+            maxwords: wordCount,
             label: {
               text: title,
               classes: "govuk-label--s"
@@ -64,7 +64,7 @@
             id: "interview-process",
             name: "course[interviewProcess]",
             rows: 20,
-            maxwords: 250,
+            maxwords: wordCount,
             label: {
               html: headingHtml
             },
