--- a/app/views/courses/about-course.njk
+++ b/app/views/courses/about-course.njk
@@ -28,7 +28,7 @@
       {% endset %}
 
       {% set helpTextHtml %}
-        <p class="govuk-body">This is the first description candidates will see on Find, so it’s important that they can quickly learn why this course is different from another.</p>
+        <p class="govuk-body">The course summary appears at the top of the page on Find, so it's important that candidates can quickly learn why this course is different from another.</p>
 
         <p class="govuk-body">Tell candidates:</p>
 
