--- a/app/views/courses/interview-process.njk
+++ b/app/views/courses/interview-process.njk
@@ -39,7 +39,7 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {% if query.version == 2 %}
+        {# {% if query.version == 2 %} #}
 
           {{ headingHtml | safe }}
 
@@ -58,7 +58,7 @@
             value: course.interviewProcess
           }) }}
 
-        {% else %}
+        {# {% else %}
 
           {{ govukCharacterCount({
             id: "interview-process",
@@ -77,7 +77,7 @@
             html: helpTextHtml
           }) }}
 
-        {% endif %}
+        {% endif %} #}
 
         {{ govukButton({
           text: "Update interview process"
@@ -89,6 +89,10 @@
         <a class="govuk-link" href="{{ actions.cancel }}">Cancel</a>
       </p>
 
+    </div>
+
+    <div class="govuk-grid-column-one-third">
+      {# {% include "./_sidebar-markdown-help.njk" %} #}
     </div>
   </div>
 
