--- a/app/views/courses/school-placements.njk
+++ b/app/views/courses/school-placements.njk
@@ -47,7 +47,7 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {% if query.version == 2 %}
+        {# {% if query.version == 2 %} #}
 
           {{ headingHtml | safe }}
 
@@ -66,7 +66,7 @@
             value: course.howSchoolPlacementsWork
           }) }}
 
-        {% else %}
+        {# {% else %}
 
           {{ govukCharacterCount({
             id: "school-placements",
@@ -85,7 +85,7 @@
             html: helpTextHtml
           }) }}
 
-        {% endif %}
+        {% endif %} #}
 
 
 
@@ -99,6 +99,10 @@
         <a class="govuk-link" href="{{ actions.cancel }}">Cancel</a>
       </p>
 
+    </div>
+
+    <div class="govuk-grid-column-one-third">
+      {# {% include "./_sidebar-markdown-help.njk" %} #}
     </div>
   </div>
 
