--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -81,12 +81,10 @@
       classes: "app-tag--prototype" if environment != 'production'
     },
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.',
-    classes: "govuk-width-container"
+    classes: "govuk-width-container" + (" govuk-phase-banner--no-border-bottom" if passport.user.organisations.length == 1 and isRollover == "false" and headerNavId != "account")
   }) }}
 
-  {# + (" govuk-phase-banner--no-border-bottom" if passport.user.organisations.length == 1 and headerNavId != "account") #}
-
-  {# {% if passport.user.organisations.length > 1 %} #}
+  {% if passport.user.organisations.length > 1 or isRollover == "true" %}
     {% set organisationHtml %}
       {{ passport.organisation.name }} {% if isRollover == "true" %}<span class="govuk-hint">– {{ cycleId | getCycleLabel }}</span>{% endif %}
     {% endset %}
@@ -109,7 +107,7 @@
         classes: "govuk-width-container"
       }) }}
     {% endif %}
-  {# {% endif %} #}
+  {% endif %}
 
   {% if not hidePrimaryNavigation %}
     {{ appPrimaryNavigation({
