--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -134,7 +134,7 @@
                   </td>
                   <td class="govuk-table__cell">
                     {% if course.status == 1 %}
-                      Yes (<a class="govuk-link" href="#">Edit<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
+                      Yes (<a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
                     {% elif course.status == 3 %}
                       No
                     {% endif %}
