--- a/app/views/courses/_sidebar.njk
+++ b/app/views/courses/_sidebar.njk
@@ -49,11 +49,21 @@
       <p class="govuk-body">Publish your changes.</p>
       <p class="govuk-body">You can make changes to this course after publishing it.</p>
 
-      {{ govukButton({
-        text: "Publish",
-        href: actions.publish,
-        classes: "govuk-!-margin-bottom-0"
-      }) }}
+      <p class="govuk-body">
+        {{ govukButton({
+          text: "Publish course",
+          href: actions.publish,
+          classes: "govuk-!-margin-bottom-0"
+        }) }}
+      </p>
+
+      <p class="govuk-body">
+        {{ govukButton({
+          text: "Roll over course",
+          href: actions.rollover,
+          classes: "govuk-button--secondary"
+        }) }}
+      </p>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
 
