Update sidebar vacancies link

--- a/app/views/courses/_sidebar.njk
+++ b/app/views/courses/_sidebar.njk
@@ -28,7 +28,7 @@
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">Vacancies</h3>
       <p class="govuk-body">
-        Yes (<a class="govuk-link" href="#">Edit<span class="govuk-visually-hidden"> vacancies for Art and design (J084)</span></a>)
+        Yes (<a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> vacancies for Art and design (J084)</span></a>)
       </p>
     {% endif %}
 
