--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -159,7 +159,7 @@
                   visuallyHiddenText: "apprenticeship"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           } if organisation.isAccreditedBody,
           {
             key: {
@@ -176,7 +176,7 @@
                   visuallyHiddenText: "funding type"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           } if not organisation.isAccreditedBody,
           {
             key: {
@@ -227,7 +227,7 @@
                   visuallyHiddenText: "accredited body"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           } if not organisation.isAccreditedBody,
           {
             key: {
@@ -244,7 +244,7 @@
                   visuallyHiddenText: "if candidates can get a sponsored Student visa"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           } if course.fundingType == "fee",
           {
             key: {
@@ -261,7 +261,7 @@
                   visuallyHiddenText: "if candidates can get a sponsored Skilled Worker visa"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           } if course.fundingType in ["salary", "apprenticeship"],
           {
             key: {
@@ -278,7 +278,7 @@
                   visuallyHiddenText: "applications open date"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           },
           {
             key: {
@@ -295,7 +295,7 @@
                   visuallyHiddenText: "course start"
                 }
               ]
-            } if course.status == "0"
+            } if course.status in ["0","2"]
           }
         ]
       }) }}
