Add actions to header. Remove sidebar.

--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -17,7 +17,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% include "_includes/page-heading.njk" %}
+      {% include "./_page-heading.njk" %}
+
+      {% include "./_actions.njk" %}
 
     </div>
   </div>
@@ -303,7 +305,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
 
-      {% include "./_sidebar.njk" %}
+      {# {% include "./_sidebar.njk" %} #}
 
     </div>
   </div>
