Update description page layout

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -33,7 +33,7 @@
   </div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
       <h2 class="govuk-heading-m">
         Course information
@@ -97,6 +97,12 @@
           }
         ]
       }) }}
+
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
       <h2 class="govuk-heading-m">
         Course length and fees
@@ -225,6 +231,12 @@
           }
         ]
       }) }}
+
+    </div>
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
 
       <h2 class="govuk-heading-m">
         Requirements and eligibility
@@ -370,11 +382,6 @@
           }
         ]
       }) }}
-
-    </div>
-    <div class="govuk-grid-column-one-third">
-
-      {# {% include "./_sidebar.njk" %} #}
 
     </div>
   </div>
