--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -32,6 +32,16 @@
     </div>
   </div>
 
+  {# {% if isCurrentCycle and isRollover and rolledOverCourse %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+
+        {% include "./_rolled-over-course.njk" %}
+
+      </div>
+    </div>
+  {% endif %} #}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
