--- a/app/views/courses/_rolled-over-course.njk
+++ b/app/views/courses/_rolled-over-course.njk
@@ -1,7 +1,7 @@
 {% set rolledOverCourseHtml %}
   <p class="govuk-body">
     <a class="govuk-link govuk-link--no-visited-state" href="/organisations/{{ organisation.id }}/cycles/{{ rolledOverCourse.cycle }}/courses/{{ rolledOverCourse.id }}">
-      View rolled over course
+      View rolled over course for the {{ data.nextCycle.code | getCycleLabel }} recruitment cycle
     </a>
   </p>
 {% endset %}
