--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -21,6 +21,10 @@
 
       {% include "./_actions.njk" %}
 
+      {% if isCurrentCycle and isRollover and rolledOverCourse %}
+        {% include "./_rolled-over-course.njk" %}
+      {% endif %}
+
     </div>
   </div>
 
@@ -31,16 +35,6 @@
 
     </div>
   </div>
-
-  {# {% if isCurrentCycle and isRollover and rolledOverCourse %}
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-
-        {% include "./_rolled-over-course.njk" %}
-
-      </div>
-    </div>
-  {% endif %} #}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
