--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -21,6 +21,10 @@
 
       {% include "./_actions.njk" %}
 
+      {% if isCurrentCycle and isRollover and rolledOverCourse %}
+        {% include "./_rolled-over-course.njk" %}
+      {% endif %}
+
     </div>
   </div>
 
@@ -34,10 +38,6 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      {% if isCurrentCycle and isRollover and rolledOverCourse %}
-        {% include "./_rolled-over-course.njk" %}
-      {% endif %}
 
       {% set locationHtml %}
         <ul class="govuk-list">
@@ -308,6 +308,8 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
+
+      {# {% include "./_sidebar.njk" %} #}
 
       {# <div class="app-status-box">
         <p class="govuk-body">
