Show rolled over state on current list

--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -107,6 +107,9 @@
                     <span class="govuk-body-s">
                       {{ course.qualification | getQualificationLabel }} - {{ course.studyMode | getStudyModeLabel | lower }}
                     </span>
+                    {# {% if course.status in [0,2] %}
+                      <br><span class="govuk-body-s">Has not been rolled over</span>
+                    {% endif %} #}
                   </td>
                   <td class="govuk-table__cell">
                     {{ govukTag({
