Update button styles

--- a/app/views/courses/_actions.njk
+++ b/app/views/courses/_actions.njk
@@ -23,7 +23,7 @@
       {{ govukButton({
         text: "Roll over course",
         href: actions.rollover,
-        classes: "govuk-button--secondary"
+        classes: "govuk-button--secondary govuk-!-margin-right-2"
       }) }}
     {% endif %}
 
