Add course meta data to course details and description

--- a/app/views/courses/description.njk
+++ b/app/views/courses/description.njk
@@ -19,6 +19,8 @@
 
       {% include "./_page-heading.njk" %}
 
+      {% include "./_meta-data.njk" %}
+
       {% include "./_actions.njk" %}
 
       {% if isCurrentCycle and isRollover and rolledOverCourse %}
