--- a/app/views/courses/_page-heading.njk
+++ b/app/views/courses/_page-heading.njk
@@ -1,4 +1,4 @@
-<h1 class="govuk-heading-l">
+<h1 class="govuk-heading-l {{- ' govuk-!-margin-bottom-2' if course.status == 1 }}">
   {% if caption.length %}
     <span class="govuk-caption-l">
       {{ caption }}
