--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -19,6 +19,8 @@
 
       {% include "./_page-heading.njk" %}
 
+      {% include "./_meta-data.njk" %}
+
       {% include "./_actions.njk" %}
 
       {% if isCurrentCycle and isRollover and rolledOverCourse %}
