--- a/app/views/courses/_page-heading.njk
+++ b/app/views/courses/_page-heading.njk
@@ -1,4 +1,4 @@
-<h1 class="govuk-heading-l {{- ' govuk-!-margin-bottom-2' if course.status == 1 }}">
+<h1 class="govuk-heading-l {{- ' govuk-!-margin-bottom-2' if course.status in [1,3] }}">
   {% if caption.length %}
     <span class="govuk-caption-l">
       {{ caption }}
@@ -9,4 +9,5 @@
     text: course.status | getCourseStatusLabel,
     classes: course.status | getCourseStatusClasses
   }) }}
+  {# <span class="govuk-!-font-size-16 govuk-!-font-weight-regular">* Unpublished changes</span> #}
 </h1>
