--- a/app/views/courses/interview-process.njk
+++ b/app/views/courses/interview-process.njk
@@ -32,7 +32,7 @@
 
         <ul class="govuk-list govuk-list--bullet">
           <li>how many interviews candidates will have</li>
-          <li>who willll be interviewing them</li>
+          <li>who will be interviewing them</li>
           <li>any tests needed - if so, how they can prepare</li>
         </ul>
       {% endset %}
