Update footer link

--- a/app/views/_includes/footer.njk
+++ b/app/views/_includes/footer.njk
@@ -37,7 +37,7 @@
     title: "Get help",
     html: helpHtml,
     items: [{
-      href: "/guidance",
+      href: "/how-to-use-this-service",
       text: "How to use this service"
     }, {
       href: "#",
