Update list of links

--- a/app/views/guidance/index.njk
+++ b/app/views/guidance/index.njk
@@ -29,7 +29,7 @@
         <ul class="govuk-list govuk-list--spaced">
           {% for link in links %}
             <li>
-              <a href="/guidance/{{ link.slug }}">{{ link.title }}</a>
+              <a href="/how-to-use-this-service/{{ link.slug }}">{{ link.title }}</a>
             </li>
           {% endfor %}
         </ul>
