Show URN as optional

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -41,7 +41,7 @@
           id: "location-urn",
           name: "location[urn]",
           label: {
-            text: "Unique reference number (URN)",
+            text: "Unique reference number (URN) (optional)",
             classes: "govuk-label--s"
           },
           errorMessage: errors | getErrorMessage("location-urn"),
