Change filename details to show

--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -83,7 +83,7 @@
             actions: {
               items: [
                 {
-                  href: actions.change + "/edit",
+                  href: actions.change + "/edit?referrer=change",
                   text: "Change",
                   visuallyHiddenText: "unique reference number (URN)"
                 }
