Add notification banner to location details

--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-  {% include "_includes/error-summary.njk" %}
+  {% include "_includes/notification-banner.njk" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
