Show URN as not entered if not entered

--- a/app/views/locations/check-your-answers.njk
+++ b/app/views/locations/check-your-answers.njk
@@ -65,7 +65,8 @@
                 text: "Unique reference number (URN)"
               },
               value: {
-                text: location.urn
+                text: location.urn if location.urn else "Not entered",
+                classes: "govuk-hint" if not location.urn
               },
               actions: {
                 items: [
