Write out the word 'dash' for the location code

--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -61,7 +61,7 @@
               text: "Location code"
             },
             value: {
-              text: location.code
+              text: "- (dash)" if location.code == "-" else location.code
             },
             actions: {
               items: [
