Show table of contents

--- a/app/views/guidance/show.njk
+++ b/app/views/guidance/show.njk
@@ -4,7 +4,7 @@
 {% set hideOrganisationSwitcher = true %}
 
 {% set caption = "How to use this service" %}
-{% set title = title %}
+{% set title = contentData.title %}
 
 {% block beforeContent %}
 {{ govukBreadcrumbs({
@@ -28,6 +28,16 @@
     <div class="govuk-grid-column-two-thirds">
 
       {% include "_includes/page-heading.njk" %}
+
+      {% if contentData.contents.items and contentData.contents.items.length %}
+        <h2 class="govuk-heading-s">Contents</h2>
+
+        <ul class="govuk-list app-list--dash course-contents govuk-!-margin-bottom-8">
+          {% for item in contentData.contents.items %}
+            <li><a class="govuk-link" href="{{ item.href }}">{{ item.text }}</a></li>
+          {% endfor %}
+        </ul>
+      {% endif %}
 
       <div class="app-markdown">
         {{ content | markdownToHtml | safe }}
