--- a/app/views/vacancies/edit.njk
+++ b/app/views/vacancies/edit.njk
@@ -18,16 +18,65 @@
 
 {% block content %}
 
-  {% include "_includes/notification-banner.njk" %}
+  {% include "_includes/error-summary.njk" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% include "_includes/page-heading.njk" %}
+      {% set headingHtml %}
+        {% include "_includes/page-heading.njk" %}
+      {% endset %}
+
+      {% set locationOptionsHtml %}
+        {{ govukCheckboxes({
+          idPrefix: "locations-vacancies",
+          name: "locations[vacancies]",
+          fieldset: {
+            legend: {
+              text: "Locations",
+              isPageHeading: false,
+              classes: "govuk-fieldset__legend--s"
+            }
+          },
+          hint: {
+            text: "Select all locations with vacancies"
+          },
+          errorMessage: errors | getErrorMessage("locations-vacancies"),
+          items: locationOptions
+        }) }}
+      {% endset %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-
+        {{ govukRadios({
+          idPrefix: "course-vacancies",
+          name: "course[hasVacancies]",
+          fieldset: {
+            legend: {
+              html: headingHtml
+            }
+          },
+          errorMessage: errors | getErrorMessage("course-vacancies"),
+          items: [
+          {
+            id: "de213b97-4126-40dd-90f4-5d4abecf4aa6",
+            value: "no",
+            text: "No vacancies",
+            hint: {
+              text: "Close this course to new applications. You can reopen the course later."
+            },
+            checked: true if course.hasVacancies === 'no' else false
+          }, {
+            id: "84f3e809-b98b-4141-b547-8f701aa65a11",
+            value: "yes",
+            text: "Some vacancies",
+            checked: true if course.hasVacancies === 'yes' else false,
+            conditional: {
+              html: locationOptionsHtml
+            }
+          }
+          ]
+        }) }}
 
         {{ govukButton({
           text: "Update vacancies"
