--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -131,8 +131,10 @@
                   <td class="govuk-table__cell">
                     {% if course.status == 1 %}
                       Open
-                    {% elif course.status == 3 %}
+                    {% elif course.status in [3,4] %}
                       Closed
+                    {% else %}
+                      -
                     {% endif %}
                   </td>
                   <td class="govuk-table__cell">
@@ -140,6 +142,10 @@
                       Yes (<a class="govuk-link" href="{{ actions.view }}/{{ course.id }}/vacancies?referrer=list">Change<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
                     {% elif course.status == 3 %}
                       No
+                    {% elif course.status == 4 %}
+                      No (<a class="govuk-link" href="{{ actions.view }}/{{ course.id }}/vacancies?referrer=list">Change<span class="govuk-visually-hidden"> vacancies for {{ course.name }} ({{ course.code }})</span></a>)
+                    {% else %}
+                      -
                     {% endif %}
                   </td>
                 </tr>
